fix column spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,8 +10,14 @@ body {
    
 }
 
-.btn {
-    color: rgba(129,150,143,1)
+.about {
+    width: fit-content !important;
+    margin-left: 50px !important;
+}
+
+.customBtn {
+        background-color: rgba(129,150,143,1) !important;
+        border-color: rgba(129,150,143,1) !important;
 }
 
 .header {
@@ -40,7 +46,7 @@ h1{
 }
  .header nav {
      font-size: 20px;
- }
+ } 
 
  /* .row {
      display: flex;
@@ -112,7 +118,7 @@ h1{
     width: 100%;
     height: auto;
   } */
-  .overlay {
+  /* .overlay {
     position: absolute;
     bottom: 0;
     background: rgb(150, 189, 198);
@@ -125,13 +131,13 @@ h1{
     font-size: 20px;
     padding: 20px;
     text-align: center;
-  }
+  } */
   
   /* .container:hover .overlay {
     opacity: 1;
   } */
 
-.two {
+/* .two {
     display: flex;
 }
 
@@ -150,7 +156,7 @@ h1{
 #four:hover {
     
     border: 5px solid rgba(150,189,198,1);
-}
+} */
 
 /* .contact {
     align-self: flex-end;
